# django-bank-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
requirements/: requirements-dev.txt  requirements.txt
src/: manage.py
src/bank/: admin.py  factories.py  models.py  permissions.py  providers.py  serializers.py  urls.py  views.py
src/bank/migrations/: 0001_initial.py
src/bank/models/: __init__.py  cards.py  customers.py  products.py  transactions.py  utils.py
src/bank/template_views/: __init__.py  accounts.py  actions.py  cards.py  customers.py  users.py
src/bank/templates/: base.html
src/bank/templates/accounts/: create.html  detail.html  list.html
src/bank/templates/actions/: deposit.html  detail.html  list.html  withdraw.html
src/bank/templates/cards/: create.html  detail.html  list.html
src/bank/templates/customers/: create.html  detail.html  list.html  update.html
src/bank/templates/registration/: login.html
src/bank/templatetags/: custom_filters.py
src/bank/test/: test_accounts.py  test_cards.py  test_customers.py  test_transactions.py
src/bank/views/: __init__.py  accounts.py  actions.py  cards.py  customers.py
src/bankapp/: asgi.py  settings.py  urls.py  wsgi.py
