[project]
name = "django-bank-app"
version = "0.0.1"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
]
requires-python = ">=3.12"
authors = [
    {name="Soumyadeep Kundu", email="soumyadeep.kundu@zopper.com"}
]
description = "Bank application in python using django and rest framework."
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "django-types>=0.19.1"
]
