[project]
name = "django-bank-app"
version = "0.0.1"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
]
requires-python = ">=3.12"
authors = [
    {name="Soumyadeep Kundu", email="soumyadeep.kundu@zopper.com"}
]
description = "Bank application in python using django and rest framework."
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "factory_boy",
    "coverage",
    "django-types>=0.19.1",
    "django-stubs[compatible-mypy]"
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "src.bankapp.settings"
